--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -698,9 +698,9 @@ gg_huv_inkomst$huvud_ink_bakgrund_Dalarna
 
 Även andelen som saknar ersättning är större i gruppen med utrikes födda, knappt `r saknar_ersattning_utrikes_andel` procent i `r huv_inkomst_manad` `r huv_inkomst_ar`, mot `r saknar_ersattning_inrikes_andel` procent i gruppen födda i Sverige. Dessa två kategorier visar på problematiska effekter av bristande integration.
 
-Om antalet individer som får ekonomiskt stöd studeras över tid, blir det tydligt att antalet som får stöd minskar, men att minskningen i första hand är koncentrerad till utrikes födda. I `r ek_stod_manad_ar_forsta` var det `r ek_stod_skillnad_forsta ` fler utrikes födda personer som var i behov av ekonomiskt stöd i Dalarna, jämfört med inrikes födda. I `r ek_stod_manad_ar_sista` var den skillnaden bara `r ek_stod_skillnad_senaste ` personer.
+Om antalet individer som får ekonomiskt stöd studeras över tid, blir det tydligt att antalet som får stöd minskar, men att minskningen i första hand är koncentrerad till utrikes födda. I `r ek_stod_manad_ar_forsta` var det ungefär `r ek_stod_skillnad_forsta ` fler utrikes födda personer som var i behov av ekonomiskt stöd i Dalarna, jämfört med inrikes födda. I `r ek_stod_manad_ar_sista` var den skillnaden bara ca `r ek_stod_skillnad_senaste ` personer.
 
-Ett annat generellt mönster är att det bland inrikes födda är vanligare att män får ekonomiskt stöd, medan det bland utrikes födda är vanligare att kvinnor får det.
+Ett annat generellt mönster är att det bland inrikes födda är vanligare att män har ekonomiskt stöd som huvudsaklig inkomst, medan det bland utrikes födda är vanligare att kvinnor har det. I `r ek_stod_manad_ar_sista` hade ungefär `r antal_kvinnor_stod_inrikes` inrikes födda kvinnor och ca `r antal_man_stod_inrikes` inrikes födda män ekonomiskt stöd som huvudsakliga inkomstkälla. Bland utrikes födda var motsvarande antal ca `r antal_kvinnor_stod_utrikes` kvinnor och ungefär `r antal_man_stod_utrikes` män.
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
